# FITR-BO

./: .gitignore  LICENSE  README.md  experiment_runner.py  pyproject.toml  riemann_turbo.py  run_benchmark_riemann_tr_paper.py
experiments/utils/: __init__.py  commit_util.py  config_utils.py  device_utils.py  logging_utils.py  path_utils.py  plotting_utils.py  result_utils.py
experiments/utils/tests/: __init__.py  test_commit_util.py  test_config_utils.py  test_logging_utils.py  test_path_utils.py  test_plotting_utils.py  test_result_utils.py
figures/fig1_induced_geometry/: run_fig1.py  unit_01_gp_model.py  unit_02_metric_field.py  unit_03_plot_fig1.py
figures/fig3/: run_fig3.py  unit_01_data.py  unit_02_det_metric.py  unit_03_plot_fig3.py
figures/fig6/: run_fig6.py  unit_01_data.py  unit_02_geometry.py  unit_03_plot_fig6.py
figures/fig7/: run_fig7.py  unit_01_data.py  unit_02_geometry.py  unit_03_plot_fig7.py
src/: __init__.py
src/benchmark/: BENCHSUITE_INSTALL.md  __init__.py  benchsuite_subprocess_wrapper.py  define_problems.py  fix_libsvm_ssl.py  lassobench_wrappers.py  vanilla_bo_benchmarks.py
src/benchmark/LassoBench/LassoBench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/benchmark/LassoBench/example/: hesbo_example.py
src/benchmark/ebo_rover/: rover_function.py  rover_utils.py
src/benchmark/mopta08/: LICENSE  README.md  mopta08.py
src/old_src/: cmaes.py  gpei.py  rei.py  saasbo.py  turbo_rei.py
src/old_src/BOUNCE/: __init__.py
src/old_src/BOUNCE/bounce/: bounce.py  callable_benchmark.py  candidates.py
src/riemannTuRBO/: __init__.py  acquisition.py  base.py  center_selection.py  diagonal.py  eps_config.py  identity.py  lowrank_svd.py  state.py  utils.py
src/riemannTuRBO/tests/: TEST_SKIP_REASONS.md  __init__.py  conftest.py  test_axis_aligned_bounds_and_clamping.py  test_benchmark_determinism.py  test_benchmark_imports.py  test_bounce.py  test_high_dim_perturbation_mask.py  test_lowrank_svd_eigen_clamping.py  test_rei_center_selection_with_transforms.py  test_transform_diagnostics.py  test_utils_linear_algebra.py
